--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   db:
     image: postgres:14
@@ -14,58 +13,12 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-
-  n8n:
-    build: .
-    # image: flaviokosta/n8n-enterprise-hack
-    restart: unless-stopped
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      DB_TYPE: postgresdb
-      DB_POSTGRESDB_HOST: db
-      DB_POSTGRESDB_PORT: 5432
-      DB_POSTGRESDB_DATABASE: n8n
-      DB_POSTGRESDB_USER: n8n
-      DB_POSTGRESDB_PASSWORD: n8n
-
-      GENERIC_TIMEZONE: America/Sao_Paulo
-      N8N_DATABASE_MIGRATE: 'true'
-
-      # Configuração para criar usuário e pular o setup inicial
-      N8N_BASIC_AUTH_ACTIVE: 'true'
-      N8N_BASIC_AUTH_USER: 'admin'
-      N8N_BASIC_AUTH_PASSWORD: 'secret'
-      N8N_SKIP_LICENSE_CHECK: 'true'
-
-      # Configuração para o setup inicial
-      N8N_USER_MANAGEMENT_DISABLED: 'false'
-      N8N_DIAGNOSTICS_ENABLED: 'false'
-      N8N_PERSONALIZATION_ENABLED: 'false'
-      N8N_SETUP_DISABLED: 'true'
-
-      # Ativar multitenancy
-      N8N_MULTI_TENANT_ENABLED: 'true'
-      N8N_MULTI_TENANT_SUBDOMAIN_ENABLED: 'false'
-
-      N8N_PORT: '5678'
     ports:
-      - '5678:5678'
-    volumes:
-      - ./data/n8n:/home/node/.n8n
+      - "5432:5432"
 
-  pgadmin:
-    image: dpage/pgadmin4
-    restart: unless-stopped
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@example.com
-      PGADMIN_DEFAULT_PASSWORD: Secret@123
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
+  adminer:
+    image: adminer
+    container_name: n8n-adminer
+    restart: always
     ports:
-      - '5050:80'
-    volumes:
-      - ./data/pgadmin:/var/lib/pgadmin
-    depends_on:
-      db:
-        condition: service_healthy
+      - "8081:8080"
